--- a/APIREST/Api/package.json
+++ b/APIREST/Api/package.json
@@ -4,7 +4,7 @@
   "description": "Api rest para el mooc",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
